--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -12,7 +12,14 @@
       #the-conversation {
         font-size: 28px;
         line-height: 30px;
-        margin: 20px 0px;
+        padding: 30px 0px;
+        margin: 15px 0px;
+        background-color: aliceblue;
+      }
+
+      #the-conversation select {
+        border: aliceblue;
+        font-size: inherit;
       }
 
       h1 {
@@ -79,6 +86,7 @@
 
     <form id="the-conversation"></form>
 
+    <legend><em>Use Tab to autocomplete and Return to proceed. Reload the page to fix a mistake.</em></legend>
 
     <canvas id="ripples" width="900" height="900"></canvas>
 
