beginning of text-based rendering

--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -88,6 +88,8 @@
 
     <legend><em>Use Tab to autocomplete and Return to proceed. Reload the page to fix a mistake.</em></legend>
 
+    <pre id="ascii"></pre>
+
     <canvas id="ripples" width="900" height="900"></canvas>
 
     <div style="display:none">
