unified and modified keyboard commands

--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -102,11 +102,10 @@
 
     <div id="legend">
       <strong>Keys: </strong> <br />
-      'p' for previous year <br />
-      'n' for next year <br />
-      'a' for all connections <br />
-      's' for show most recent connections <br />
-      'f' for filter stories by year <br />
+      '←' for previous year <br />
+      '→' for next year <br />
+      'e' toggles recent connections <br />
+      'f' toggles filter stories by year <br />
       'l' for legend edges <br />
     </div>
 
