--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -14,7 +14,7 @@
       }
 
       #the-conversation {
-        font-size: 28px;
+        font-size: 20px;
         line-height: 30px;
         /* padding: 30px 0px; */
         /* margin: 15px 0px; */
@@ -26,7 +26,7 @@
       }
 
       h1 {
-        font-size: 20px;
+        font-size: 40px;
         color: purple;
       }
 
@@ -53,7 +53,7 @@
       }
 
       #sentences, h3 {
-        font-size: 26px;
+        font-size: 16px;
       }
 
       .word:active, .word:focus, .word:hover {
@@ -112,7 +112,7 @@
         <div id="storytime">
           <h3>Add a story</h3>
           <form id="the-conversation"></form>
-          <p><em>Use Tab to autocomplete and Return to proceed. Reload the page to fix a mistake.</em></p>
+          <p><em>Use <em>Tab</em> to autocomplete and <em>Return</em> to proceed. Reload the page to fix a mistake.</em></p>
         </div>
 
         <form id="newaction" style="display:none">
