--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -10,7 +10,7 @@
       @import url(css/style.css);
 
       #storytime {
-        background-color: aliceblue;
+        background-color: #efd8ff;
       }
 
       #the-conversation {
@@ -24,10 +24,14 @@
         border: aliceblue;
         font-size: inherit;
       }
+      
+       #header {
+        margin-bottom: 2em;
+      }
 
       h1 {
         font-size: 40px;
-        color: purple;
+        color: #9900ff;
       }
 
       .background {
@@ -53,7 +57,8 @@
       }
 
       #sentences, h3 {
-        font-size: 16px;
+        font-size: 16px
+        background-color: #efd8ff;
       }
 
       .word:active, .word:focus, .word:hover {
@@ -91,6 +96,7 @@
 
       #right {
         margin-left: 400px;
+        padding-left: 2em;
       }
 
       .clear {
