--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -41,7 +41,7 @@
       }
 
       canvas {
-        border: 1px solid black;
+      /*  border: 1px solid black; */
       }
 
       #legend {
@@ -57,8 +57,7 @@
       }
 
       #sentences, h3 {
-        font-size: 16px
-        background-color: #efd8ff;
+        font-size: 16px;
       }
 
       .word:active, .word:focus, .word:hover {
@@ -91,11 +90,13 @@
 
       #left {
         width: 400px;
-        float: left;
+        float: left
+        background-color: #efd8ff
+        padding: 1em;
       }
 
       #right {
-        margin-left: 400px;
+        margin-left: 420px;
         padding-left: 2em;
       }
 
