minor style fixes

--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -90,14 +90,14 @@
 
       #left {
         width: 400px;
-        float: left
-        background-color: #efd8ff
+        float: left;
+        background-color: #efd8ff;
         padding: 1em;
       }
 
       #right {
         margin-left: 420px;
-        padding-left: 2em;
+        padding-left: 19px;
       }
 
       .clear {
