--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
 
     <link rel="stylesheet" href="css/example.css">
+    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 
     <style type="text/css">
       @import url(css/style.css);
