--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -46,9 +46,9 @@
       }
 
       #legend {
-        position: absolute;
-        top: 830px;
-        left: 1100px;
+        /* position: absolute; */
+        /* top: 830px; */
+        /* left: 1100px; */
         padding: 10px;
         font-size: 14px;
       }
