put legend in the corner; re-render after the fonts have loaded

--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -46,9 +46,9 @@
       }
 
       #legend {
-        /* position: absolute; */
-        /* top: 830px; */
-        /* left: 1100px; */
+        position: absolute;
+        top: 0px;
+        left: 11px;
         padding: 10px;
         font-size: 14px;
       }
@@ -97,6 +97,7 @@
       }
 
       #right {
+        position: relative;
         margin-left: 420px;
         padding-left: 19px;
       }
