redo input form language

--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -119,7 +119,7 @@
       <div id="left">
 
         <div id="storytime">
-          <h3>Add a story</h3>
+          <h3>Want to add something to the map?</h3>
           <form id="the-conversation"></form>
           <p><em>Use <em>Tab</em> to autocomplete and <em>Return</em> to proceed. Reload the page to fix a mistake.</em></p>
         </div>
