better arrows, stronger keys

--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -190,8 +190,8 @@
 
         <div id="legend">
           <strong>Keys: </strong> <br />
-          '&lt;' for previous year <br />
-          '&gt;' for next year <br />
+          '←' for previous year <br />
+          '→' for next year <br />
           'e' toggles recent connections <br />
           'f' toggles filter stories by year <br />
           'l' for legend edges <br />
