mouseover highlighting for stories and things

--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -10,6 +10,10 @@
     <style type="text/css">
       @import url(css/style.css);
 
+      .highlight {
+        background-color: #ffff66;
+      }
+
       #storytime {
         background-color: #efd8ff;
       }
