--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Digital Justice and the AMC</title>
+    <title>Ripple Map</title>
     <meta charset="UTF-8">
 
     <link rel="stylesheet" href="css/example.css">
@@ -116,7 +116,8 @@
 
     <div id="header">
       <!-- <h1> Welcome to ripplemapping </h1> -->
-      <h1>The ripple effect of 'A Healthy Digital Ecology: Creating a Community Vision for Federal Funding' at AMC 2009</h1>
+      <!-- <h1>The ripple effect of 'A Healthy Digital Ecology: Creating a Community Vision for Federal Funding' at AMC 2009</h1> -->
+      <h1>Welcome to the Ripple Map</h1>
     </div>
 
     <div id="main">
