--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -30,6 +30,9 @@
 
       .tag {
         cursor: not-allowed;
+        background-color: #fcecff;
+        padding: 2px;
+        margin: 1px;
       }
 
       #the-conversation {
